Baseline on Java 21